--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="CV of Shaish Guni"
     />
     <link rel="apple-touch-icon" href="https://lh3.googleusercontent.com/ogw/ADea4I5Ch1jV9tOOal564RtE7beA4QJhHpmpi3ITHeV0BQ=s192-c-mo" />
     <!--
